@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing true
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0



class Client {
    - String name
    - String email
    - Integer passportNumber
    - String taxNumber
    - Address address
    - Integer phoneNumber
}

class Address{
     - String streetAddress
     - String state
     - Integer zipCode
}


class Employee{
    - String name
    - Integer passportNumber
    - String taxNumber
    - String email
    - Integer phoneNumber
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getVisitRequestRepository()
    + getClientRepository()
}


class ClientRepository{
'    - ArrayList<Client> clients
'    + getClientName()
'    + getClientPhoneNumber()
    + getClient()
}

class VisitRequestRepository{
'    - ArrayList <VisitRequest> visitRequest
    + getVisitRequests()
}

class VisitRequest{
'    - Property property
    - String preferredDate
    - String timeSlot
    - String clientName
    - Integer clientPhoneNumber
}







class Person{
    - String name
'    - Integer passportNumber
'    - String taxNumber
    - String email
'    - Long phoneNumber
}


class RespondVisitRequestController {

    + createEmail(String sender, String receiver, String subject, String message)
    + getClientLIst()
    + getVisitRequests()

}



class RespondVisitRequestUI {
}

ApplicationSession -> ApplicationSession : instance
RespondVisitRequestUI .> RespondVisitRequestController

RespondVisitRequestController .> ApplicationSession

RespondVisitRequestController .> Repositories : repositories
Repositories -> Repositories : instance
RespondVisitRequestController -> Agent : Agent
Agent --|> Employee : implements
Address "1" <-- "1"  Person
RespondVisitRequestController ..> VisitRequestRepository : visitRequestRepository
RespondVisitRequestController ..> ClientRepository : clientRepository
Repositories --> "1" ClientRepository
ClientRepository --> "1" Client
VisitRequestRepository "1" -> "1" VisitRequest
Repositories --> "1" VisitRequestRepository
Client "1" --> "*" VisitRequest : creates
Agent "1" -> "*" VisitRequest : responds

Role"1" <-- "*"Employee : has a

Person <|- Client
Person <|-- Employee


@enduml